celebration is longer and fixed tag add button dark mode

--- a/css/main-page-dark.css
+++ b/css/main-page-dark.css
@@ -84,3 +84,7 @@ body.dark-mode .tag-button {
 body.dark-mode .add-list {
     filter: invert(0);
 }
+
+body.dark-mode .add-tag {
+    filter: invert(0);
+}
